--- a/index.html
+++ b/index.html
@@ -8,229 +8,231 @@
   </head>
   <body>
 
-      <!-- Main Banner -->
+    <!-- Site Container -->
 
-      <div class="main-banner">
+    <div class="container">
+
+          <!-- Navigation Bar -->
+
+          <header>
+              <div class="logo">
+                <img src="resources/capstone_colmar_assets/images/ic-logo.svg">
+                <span class="logo-text"><span id="colmar">COLMAR</span>ACADEMY</span>
+              </div>
+              <nav>
+              <ul>
+                <li><a href="#">On campus</a></li>
+                <li><a href="#">Online</a></li>
+                <li><a href="#">For companies</a></li>
+                <li><a href="#">Sign in</a></li>
+
+              </ul>
+              <ul class="mobile-nav container">
+                <li><a href="#"><img src="resources/capstone_colmar_assets/images/ic-logo.svg"></a></li>
+                <li><a href="#"><img src="resources/capstone_colmar_assets/images/ic-on-campus.svg"></a></li>
+                <li><a href="#"><img src="resources/capstone_colmar_assets/images/ic-online.svg"></a></li>
+                <li><a href="#"><img src="resources/capstone_colmar_assets/images/ic-login.svg"></a></li>
+              </ul>
+              </nav>
+          </header>
+
+
+
+          <!-- Main Banner -->
+
+          <div class="main-banner">
+
+            <!-- Main Image -->
+            <div class="main-image">
+              <img src="resources/capstone_colmar_assets/images/banner.jpg" alt="Students Studying">
+            </div>
+
+            <!-- Headline -->
+
+            <div class="headline">
+              <h1>Learn something<br>new everyday</h1>
+              <h3>Lorem ipsum dolor sit amet,<br>consecutor adipiscing elit.</h3>
+              <a href="#"><span class="startbutton">Start here</span></a>
+            </div>
+
+          </div>
+
+        <!-- Academy Info -->
+
+        <div class="academy-info">
+
+          <div class="featured-story">
+            <img src="resources/capstone_colmar_assets/images/information-main.jpg" alt="Student Reading">
+            <h2>It doesn't hurt to keep practicing</h2>
+            <br>
+            <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque.  Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+            <p id="signature">Emanuel, Sr Strategist at Hiring.com</p>
+          </div>
+          <div class="information">
+            <div class="bulletin">
+              <div class="bulletin-image">
+                <img src="resources/capstone_colmar_assets/images/information-orientation-mobile.jpg" alt="Students Walking" />
+              </div>
+              <ul>
+                <h4>Orientation date</h4>
+                <br>
+                <span class="description">Tue 10/11 & Wed 10/12: 8am-3pm</span>
+                <br>
+                <a href="#">Read More</a>
+              </ul>
+            </div>
+            <div class="bulletin">
+              <div class="bulletin-image">
+                <img src="resources/capstone_colmar_assets/images/information-campus.jpg" alt="Classroom" />
+              </div>
+              <ul>
+                <h4>Our campus</h4>
+                <br>
+                <span class="description">Find which campus is close by you</span>
+                <br>
+                <a href="#">Read More</a>
+              </ul>
+            </div>
+            <div class="bulletin">
+              <div class="bulletin-image">
+                <img src="resources/capstone_colmar_assets/images/information-guest-lecture.jpg" alt="Oliver Sack" />
+              </div>
+              <ul>
+                <h4>Our guest lecture</h4>
+                <br>
+                <span class="description">Join a keynote with Oliver Sack about music in medical treatment</span>
+                <br>
+                <a href="#">Read More</a>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- Course Info -->
+
+        <div class="course-info">
 
         <!-- Site Container -->
 
-        <div class="container">
+          <div class="container">
 
-        <!-- Navigation Bar -->
-
-        <header>
-            <div class="logo">
-              <img src="resources/capstone_colmar_assets/images/ic-logo.svg">
-              <span class="logo-text">COLMARACADEMY</span>
+            <div class="course-heading">
+              <h2>Start learning</h2>
             </div>
-            <nav>
-            <ul class="container">
-              <li>On campus</li>
-              <li>Online</li>
-              <li>For companies</li>
-              <li>Sign in</li>
-
-            </ul>
-            <ul class="mobile-nav container">
-              <li>Menu</li>
-            </ul>
-            </nav>
-        </header>
-
-        <!-- Headline -->
-
-        <div class="main-banner">
-          <img src="resources/capstone_colmar_assets/images/banner.jpg" alt="Students Studying">
-        </div>
-        <div class="headline">
-          <h1>Learn something new everyday</h1>
-          <h2>Lorem ipsum dolor sit amet</h2>
-          <span class="startbutton">Start here</span>
-        </div>
-
-      </div>
-
-    </div>
-
-    <!-- Academy Info -->
-
-    <div class="academy-info">
-
-      <!-- Site Container -->
-
-      <div class="container">
-
-        <div class="featured-story">
-          <img src="resources/capstone_colmar_assets/images/information-main.jpg" alt="Student Studying">
-          <h3>It doesn't hurt to keep practicing</h3>
-          <br>
-          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque.  Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-          <p id="signature">Emanuel, Sr Strategist at Hiring.com</p>
-        </div>
-        <div class="information">
-          <div class="bulletin">
-            <div class="bulletin-image">
-              <img src="resources/capstone_colmar_assets/images/information-orientation-mobile.jpg" alt="Students Walking" />
-            </div>
-            <br>
-            <h3>Orientation date</h3>
-            <br>
-            <span class="description">Tue 10/11 & Wed 10/12: 8am-3pm</span>
-            <br>
-            <a href="#">Read More</a>
-          </div>
-          <div class="bulletin">
-            <div class="bulletin-image">
-              <img src="resources/capstone_colmar_assets/images/information-campus.jpg" alt="Classroom" />
-            </div>
-            <br>
-            <h3>Our campus</h3>
-            <br>
-            <span class="description">Find which campus is close by you</span>
-            <br>
-            <a href="#">Read More</a>
-          </div>
-          <div class="bulletin">
-            <div class="bulletin-image">
-              <img src="resources/capstone_colmar_assets/images/information-guest-lecture.jpg" alt="Oliver Sack" />
-            </div>
-            <br>
-            <h3>Our guest lecture</h3>
-            <br>
-            <span class="description">Join a keynote with Oliver Sack about music in medical treatment</span>
-            <br>
-            <a href="#">Read More</a>
-          </div>
-        </div>
-      </div>
-
-      <!-- Course Info -->
-
-      <div class="course-info">
-
-      <!-- Site Container -->
-
-        <div class="container">
-
-          <div class="course-heading">
-            <span>Start learning</span>
-          </div>
-            <div class="focus-areas">
-              <div class="focus-area">
-                <div class="course-image">
-                  <img src="resources/capstone_colmar_assets/images/course-software.jpg" alt="Computers" />
-                </div>
-                <br>
-                <span class="course-heading">Software engineering</span>
-                <br>
-                <span class="subheading">Courses</span>
-                <span>Web Development, Mobile Development, iOT, APIs</span>
-              </div>
-              <div class="focus-area">
-                <div class="course-image">
-                  <img src="resources/capstone_colmar_assets/images/course-computer-art.jpg" alt="Mobile Phone" />
-                </div>
-                <br>
-                <span class="course-heading">Computer art</span>
-                <br>
-                <span class="subheading">Courses</span>
-                <span>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</span>
-              </div>
-              <div class="focus-area">
-                <div class="course-image">
-                  <img src="resources/capstone_colmar_assets/images/course-design.jpg" alt="Student with Camera" />
-                </div>
-                <br>
-                <span class="course-heading">Design</span>
-                <br>
-                <span class="subheading">Courses</span>
-                <span>User Experience Design, User Research, Visual Design</span>
-              </div>
-              <div class="focus-area">
-                <div class="course-image">
-                  <img src="resources/capstone_colmar_assets/images/course-data.jpg" alt="Laptop" />
-                </div>
-                <br>
-                <span class="course-heading">Data</span>
-                <br>
-                <span class="subheading">Courses</span>
-                <span>Data Science, Big Data, SQL, Data Visualization</span>
-              </div>
-              <div class="focus-area">
-                <div class="course-image">
-                  <img src="resources/capstone_colmar_assets/images/course-business.jpg" alt="Chess Pieces" />
-                </div>
-                <br>
-                <span class="course-heading">Business</span>
-                <br>
-                <span class="subheading">Courses</span>
-                <span>Product Development, Business Development, Startup</span>
-              </div>
-              <div class="focus-area">
-                <div class="course-image">
-                  <img src="resources/capstone_colmar_assets/images/course-marketing.jpg" alt="Smart Watch" />
-                </div>
-                <br>
-                <span class="course-heading">Marketing</span>
-                <br>
-                <span class="subheading">Courses</span>
-                <span>Analytics, Content Marketing, Mobile Marketing</span>
-              </div>
-            </div>
-        </div>
-      </div>
-
-      <!-- Thesis Exhibit -->
-
-          <div class="thesis-exhibit">
-
-            <!-- Site Container -->
-
-            <div class="container">
-              <div class="thesis-heading">
-                <span>Thesis Exhibit</span>
-              </div>
-              <div class="studies">
-                <div class="featured-story">
-                  <video src="resources/capstone_colmar_assets/videos/thesis.mp4" controls>
-
-                  </video>
-                  <h3>Reimagine urban</h3>
-                  <br>
-                  <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque.  Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-                </div>
-                <div class="more-studies">
-                  <div class="study">
-                    <div class="study-image">
-                      <img src="resources/capstone_colmar_assets/images/thesis-fisma.jpg" alt="Designer Drawing Prototype" />
+              <div class="focus-areas">
+                  <div class="focus-area">
+                    <div class="course-image">
+                      <img src="resources/capstone_colmar_assets/images/course-software.jpg" alt="Computers" />
                     </div>
-                    <br>
-                    <h3>Fisma: Design and Prototype</h3>
-                    <br>
-                    <span class="description">Designer showcase of new prototype product</span>
+                    <div class="description-container">
+                      <span class="course-heading"><h4>Software engineering</h4></span>
+                      <span class="subheading">Courses</span>
+                      <span class="description">Web Development, Mobile Development, iOT, APIs</span>
+                    </div>
                   </div>
-                  <div class="study">
-                    <div class="study-image">
-                      <img src="resources/capstone_colmar_assets/images/thesis-now-and-then.jpg" alt="NYC Skyline" />
+                  <div class="focus-area">
+                    <div class="course-image">
+                      <img src="resources/capstone_colmar_assets/images/course-computer-art.jpg" alt="Mobile Phone" />
                     </div>
-                    <br>
-                    <h3>Now and then</h3>
-                    <br>
-                    <span class="description">Reasearch study about New York</span>
+                    <div class="description-container">
+                      <span class="course-heading"><h4>Computer art</h4></span>
+                      <span class="subheading">Courses</span>
+                      <span class="description">Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</span>
+                    </div>
+                  </div>
+                  <div class="focus-area">
+                    <div class="course-image">
+                      <img src="resources/capstone_colmar_assets/images/course-design.jpg" alt="Student with Camera" />
+                    </div>
+                    <div class="description-container">
+                      <span class="course-heading"><h4>Design</h4></span>
+                      <span class="subheading">Courses</span>
+                      <span class="description">User Experience Design, User Research, Visual Design</span>
+                    </div>
+                  </div>
+                  <div class="focus-area">
+                    <div class="course-image">
+                      <img src="resources/capstone_colmar_assets/images/course-data.jpg" alt="Laptop" />
+                    </div>
+                    <div class="description-container">
+                      <span class="course-heading"><h4>Data</h4></span>
+                      <span class="subheading">Courses</span>
+                      <span class="description">Data Science, Big Data, SQL, Data Visualization</span>
+                    </div>
+                  </div>
+                  <div class="focus-area">
+                    <div class="course-image">
+                      <img src="resources/capstone_colmar_assets/images/course-business.jpg" alt="Chess Pieces" />
+                    </div>
+                    <div class="description-container">
+                      <span class="course-heading"><h4>Business</h4></span>
+                      <span class="subheading">Courses</span>
+                      <span class="description">Product Development, Business Development, Startup</span>
+                    </div>
+                  </div>
+                  <div class="focus-area">
+                    <div class="course-image">
+                      <img src="resources/capstone_colmar_assets/images/course-marketing.jpg" alt="Smart Watch" />
+                    </div>
+                    <div class="description-container">
+                      <span class="course-heading"><h4>Marketing</h4></span>
+                      <span class="subheading">Courses</span>
+                      <span class="description">Analytics, Content Marketing, Mobile Marketing</span>
+                    </div>
+                  </div>
+              </div>
+          </div>
+        </div>
+
+        <!-- Thesis Exhibit -->
+
+            <div class="thesis-exhibit">
+
+
+                <div class="thesis-heading">
+                  <h2>Thesis Exhibit</h2>
+                </div>
+                <div class="studies">
+                  <div class="featured-study">
+                    <video src="resources/capstone_colmar_assets/videos/thesis.mp4" controls></video>
+                    <h3>Reimagine urban</h3>
+                    <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque.  Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+                  </div>
+                  <div class="more-studies">
+                    <div class="study">
+                      <div class="study-image">
+                        <img src="resources/capstone_colmar_assets/images/thesis-fisma.jpg" alt="Designer Drawing Prototype" />
+                      </div>
+                      <ul>
+                        <h4>Fisma: Design and Prototype</h4>
+                        <br>
+                        <span class="description">Designer showcase of new prototype product</span>
+                      </ul>
+                    </div>
+                    <div class="study">
+                      <div class="study-image">
+                        <img src="resources/capstone_colmar_assets/images/thesis-now-and-then.jpg" alt="NYC Skyline" />
+                      </div>
+                      <ul>
+                        <h4>Now and then</h4>
+                        <br>
+                        <span class="description">Reasearch study about New York</span>
+                      </ul>
+                    </div>
                   </div>
                 </div>
-              </div>
+
             </div>
 
-      <!-- Footer -->
+        <!-- Footer -->
 
-      <footer>
-        <div class="container">
-          <span>© 2016 Colmar Academy. All rights reserved</span>
-        </div>
-      </footer>
+        <footer>
+            <span class="copyright-text">© 2016 Colmar Academy. All rights reserved</span>
+            <span class="copyright-links"><a href="#">Terms</a> <a href="#">Privacy</a></span>
+        </footer>
 
-    </div>
+      </div>
+      </div>
 
   </body>
 </html>
