--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Colmar Academy</title>
     <link rel='stylesheet' type='text/css' href='resources/css/reset.css'>
     <link rel='stylesheet' type='text/css' href='resources/css/style.css'>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link rel="icon" href="resources/capstone_colmar_assets/images/favicon.ico" type="image/x-icon">
   </head>
   <body>
 
